--- a/public/index.html
+++ b/public/index.html
@@ -39,21 +39,21 @@
 				<li class="position">PhD Student, University of Pennsylvania</li>
 				<li class="email">kishor at seas upenn edu</li>
 			</ul></span>
-
+		
 
 		<nav class="nav social">
 			<ul class="flat"><a href="https://github.com/keyshor" title="GitHub"><i data-feather="github"></i></a><a href="https://linkedin.com/in/kishor-jothimurugan/" title="LinkedIn"><i data-feather="linkedin"></i></a>
 				|
 				<a href="cv.pdf" class="blog_cv">[cv]</a>
-
-
+				
+				
 			</ul>
 		</nav>
 	</div>
 
 	<nav class="nav">
 		<ul class="flat">
-
+			
 		</ul>
 	</nav>
 </div>
@@ -71,7 +71,7 @@ verifying systems with machine learning components and using machine learning to
 improve scalability of program analysis and verification techniques.</p>
 
 			</div><div>
-
+			
 
 <h3 id="projects">Projects</h3>
 
@@ -84,7 +84,7 @@ In streaming algorithms, streams are defined to be sequences of data points. In 
 </ul>
 
 			</div><div>
-
+			
 
 <h3 id="publications">Publications</h3>
 
@@ -100,7 +100,7 @@ Rajeev Alur, Osbert Bastani. <em>Neural Information Processing Systems (NeurIPS)
 <li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>, Rajeev Alur, Yu Chen,
 Kishor Jothimurugan, Sanjeev Khanna. <em>In submission</em>.</p></li>
 
-<li><p><strong>State and Action Abstractions for Hierarchical Deep Reinforcement Learning</strong>, Kishor Jothimurugan,
+<li><p><strong>State and action abstractions for hierarchical deep reinforcement learning</strong>, Kishor Jothimurugan,
 Wenbo Zhang, Osbert Bastani, Rajeev Alur. <em>In submission</em>.</p></li>
 
 <li><p><strong>Techniques for verifying robustness of neural networks</strong>, Kishor Jothimurugan.
@@ -109,7 +109,7 @@ Wenbo Zhang, Osbert Bastani, Rajeev Alur. <em>In submission</em>.</p></li>
 </ul>
 
 			</div><div>
-
+			
 
 <h3 id="other-projects">Other Projects</h3>
 
@@ -152,7 +152,7 @@ var doNotTrack = false;
 if (!doNotTrack) {
 	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 	ga('create', 'UA-1234-6', 'auto');
-
+	
 	ga('send', 'pageview');
 }
 </script>
