--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Publications" />
 <meta property="og:description" content="Publications  A composable specification language for reinforcement learning tasks, Kishor Jothimurugan, Rajeev Alur, Osbert Bastani. Neural Information Processing Systems (NeurIPS), 2019.
 [paper][slides][code]  Drafts and Reports  Space-efficient query evaluation over probabilistic event streams, Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna. In submission.
- State and Action Abstractions for Hierarchical Deep Reinforcement Learning, Kishor Jothimurugan, Wenbo Zhang, Osbert Bastani, Rajeev Alur. In submission.
+ State and action abstractions for hierarchical deep reinforcement learning, Kishor Jothimurugan, Wenbo Zhang, Osbert Bastani, Rajeev Alur. In submission.
  Techniques for verifying robustness of neural networks, Kishor Jothimurugan." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://seas.upenn.edu/~kishor/publications/" />
@@ -24,7 +24,7 @@
 <meta name="twitter:title" content="Publications"/>
 <meta name="twitter:description" content="Publications  A composable specification language for reinforcement learning tasks, Kishor Jothimurugan, Rajeev Alur, Osbert Bastani. Neural Information Processing Systems (NeurIPS), 2019.
 [paper][slides][code]  Drafts and Reports  Space-efficient query evaluation over probabilistic event streams, Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna. In submission.
- State and Action Abstractions for Hierarchical Deep Reinforcement Learning, Kishor Jothimurugan, Wenbo Zhang, Osbert Bastani, Rajeev Alur. In submission.
+ State and action abstractions for hierarchical deep reinforcement learning, Kishor Jothimurugan, Wenbo Zhang, Osbert Bastani, Rajeev Alur. In submission.
  Techniques for verifying robustness of neural networks, Kishor Jothimurugan."/>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:500,100,300" rel="stylesheet">
 
@@ -62,7 +62,7 @@ Rajeev Alur, Osbert Bastani. <em>Neural Information Processing Systems (NeurIPS)
 <li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>, Rajeev Alur, Yu Chen,
 Kishor Jothimurugan, Sanjeev Khanna. <em>In submission</em>.</p></li>
 
-<li><p><strong>State and Action Abstractions for Hierarchical Deep Reinforcement Learning</strong>, Kishor Jothimurugan,
+<li><p><strong>State and action abstractions for hierarchical deep reinforcement learning</strong>, Kishor Jothimurugan,
 Wenbo Zhang, Osbert Bastani, Rajeev Alur. <em>In submission</em>.</p></li>
 
 <li><p><strong>Techniques for verifying robustness of neural networks</strong>, Kishor Jothimurugan.
@@ -86,7 +86,7 @@ var doNotTrack = false;
 if (!doNotTrack) {
 	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 	ga('create', 'UA-1234-6', 'auto');
-
+	
 	ga('send', 'pageview');
 }
 </script>
