--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -13,8 +13,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="Publications" />
 <meta property="og:description" content="Publications  A composable specification language for reinforcement learning tasks, Kishor Jothimurugan, Rajeev Alur, Osbert Bastani. Neural Information Processing Systems (NeurIPS), 2019.
-[paper][slides][code]  Drafts and Reports  Space-efficient query evaluation over probabilistic event streams, Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna. In submission.
- State and action abstractions for hierarchical deep reinforcement learning, Kishor Jothimurugan, Wenbo Zhang, Osbert Bastani, Rajeev Alur. In submission.
+[paper][slides][code]
+ Space-efficient query evaluation over probabilistic event streams, Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna. Logic in Computer Science (LICS), 2020.
+[paper][slides]
+  Drafts and Reports  Abstract value iteration for hierarchical deep reinforcement learning, Kishor Jothimurugan, Osbert Bastani, Rajeev Alur. In submission.
  Techniques for verifying robustness of neural networks, Kishor Jothimurugan." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://seas.upenn.edu/~kishor/publications/" />
@@ -23,8 +25,10 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Publications"/>
 <meta name="twitter:description" content="Publications  A composable specification language for reinforcement learning tasks, Kishor Jothimurugan, Rajeev Alur, Osbert Bastani. Neural Information Processing Systems (NeurIPS), 2019.
-[paper][slides][code]  Drafts and Reports  Space-efficient query evaluation over probabilistic event streams, Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna. In submission.
- State and action abstractions for hierarchical deep reinforcement learning, Kishor Jothimurugan, Wenbo Zhang, Osbert Bastani, Rajeev Alur. In submission.
+[paper][slides][code]
+ Space-efficient query evaluation over probabilistic event streams, Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna. Logic in Computer Science (LICS), 2020.
+[paper][slides]
+  Drafts and Reports  Abstract value iteration for hierarchical deep reinforcement learning, Kishor Jothimurugan, Osbert Bastani, Rajeev Alur. In submission.
  Techniques for verifying robustness of neural networks, Kishor Jothimurugan."/>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:500,100,300" rel="stylesheet">
 
@@ -51,19 +55,20 @@
   <h3 id="publications">Publications</h3>
 
 <ul>
-<li><strong>A composable specification language for reinforcement learning tasks</strong>, Kishor Jothimurugan,
+<li><p><strong>A composable specification language for reinforcement learning tasks</strong>, Kishor Jothimurugan,
 Rajeev Alur, Osbert Bastani. <em>Neural Information Processing Systems (NeurIPS), 2019</em>.<br />
-[<a href="papers/spectrl_full.pdf">paper</a>][<a href="slides/spectrl.pdf">slides</a>][<a href="https://github.com/keyshor/spectrl_tool">code</a>]</li>
+[<a href="papers/spectrl_full.pdf">paper</a>][<a href="https://drive.google.com/file/d/1-TfjsnnWWFI9Dz0rAGBgjoRJ6ESlKSzJ/view?usp=sharing">slides</a>][<a href="https://github.com/keyshor/spectrl_tool">code</a>]</p></li>
+
+<li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>, Rajeev Alur, Yu Chen,
+Kishor Jothimurugan, Sanjeev Khanna. <em>Logic in Computer Science (LICS), 2020</em>.<br />
+[<a href="papers/lics20.pdf">paper</a>][<a href="https://docs.google.com/presentation/d/1hIBcbCh8aD63NEWL2lydmi2Wprz72wcQohP8e8yU1BA/edit?usp=sharing">slides</a>]</p></li>
 </ul>
 
 <h3 id="drafts-and-reports">Drafts and Reports</h3>
 
 <ul>
-<li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>, Rajeev Alur, Yu Chen,
-Kishor Jothimurugan, Sanjeev Khanna. <em>In submission</em>.</p></li>
-
-<li><p><strong>State and action abstractions for hierarchical deep reinforcement learning</strong>, Kishor Jothimurugan,
-Wenbo Zhang, Osbert Bastani, Rajeev Alur. <em>In submission</em>.</p></li>
+<li><p><strong>Abstract value iteration for hierarchical deep reinforcement learning</strong>, Kishor Jothimurugan,
+Osbert Bastani, Rajeev Alur. <em>In submission</em>.</p></li>
 
 <li><p><strong>Techniques for verifying robustness of neural networks</strong>, Kishor Jothimurugan.
 <em>WPE II Survey Report</em>.<br />
@@ -86,7 +91,7 @@ var doNotTrack = false;
 if (!doNotTrack) {
 	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 	ga('create', 'UA-1234-6', 'auto');
-	
+
 	ga('send', 'pageview');
 }
 </script>
