--- a/public/introduction/index.html
+++ b/public/introduction/index.html
@@ -25,7 +25,7 @@ My (broad) areas of interest include formal methods, verification, and machine l
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:500,100,300" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" media="screen" href=https://seas.upenn.edu/~kishor/css/normalize.css />
-	<link rel="stylesheet" type="text/css" media="screen" href=https://seas.upenn.edu/~kishor/css/main.css /><script src=https://seas.upenn.edu/~kishor/js/feather.min.js></script><script src=https://seas.upenn.edu/~kishor/js/main.js></script>
+	<link rel="stylesheet" type="text/css" media="screen" href=https://seas.upenn.edu/~kishor/css/main.css/><script src=https://seas.upenn.edu/~kishor/js/feather.min.js></script><script src=https://seas.upenn.edu/~kishor/js/main.js></script>
 </head>
 
     <body>
@@ -59,14 +59,14 @@ improve scalability of program analysis and verification.</p>
 DRL has been shown to be successful in many applications such as robotics and game playing.
 However, applying DRL to new problems is challenging due to a number of reasons. Firstly,
 it is not always straightforward to define rewards for the task at hand. In
-(<a href="paper/spectrl_full.pdf">NeurIPS&rsquo;20</a>) we provide a way to
+our <a href="papers/spectrl_full.pdf">NeurIPS&rsquo;20</a>) paper we provide a way to
 overcome this challenge by proposing an algorithm that automatically generates rewards from
 a high level logical specification.
 Another major drawback of DRL is that it does not provide any guarantee about
 the learned policy. In safety critical applications, we would like to verify that the
-learned policy is, in fact, safe. An interesting research direction that I am looking into, here,
-is to see how one can decompose an
-RL task into simpler tasks, so that, not only is it easier to learn policies for the simpler tasks,
+learned policy is, in fact, safe. Towards this goal, I am working on a project
+on decomposing
+RL tasks into simpler tasks so that, not only is it easier to learn policies for the simpler tasks,
 but it also makes verification faster.</p>
 
 </div>
@@ -85,7 +85,7 @@ var doNotTrack = false;
 if (!doNotTrack) {
 	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 	ga('create', 'UA-1234-6', 'auto');
-
+	
 	ga('send', 'pageview');
 }
 </script>
