--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:500,100,300" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" media="screen" href=https://seas.upenn.edu/~kishor/css/normalize.css />
-	<link rel="stylesheet" type="text/css" media="screen" href=https://seas.upenn.edu/~kishor/css/main.css /><script src=https://seas.upenn.edu/~kishor/js/feather.min.js></script><script src=https://seas.upenn.edu/~kishor/js/main.js></script>
+	<link rel="stylesheet" type="text/css" media="screen" href=https://seas.upenn.edu/~kishor/css/main.css/><script src=https://seas.upenn.edu/~kishor/js/feather.min.js></script><script src=https://seas.upenn.edu/~kishor/js/main.js></script>
 </head>
 
 
@@ -39,21 +39,21 @@
 				<li class="position">PhD Student, University of Pennsylvania</li>
 				<li class="email">kishor at seas upenn edu</li>
 			</ul></span>
-
+		
 
 		<nav class="nav social">
 			<ul class="flat"><a href="https://github.com/keyshor" title="GitHub"><i data-feather="github"></i></a><a href="https://linkedin.com/in/kishor-jothimurugan/" title="LinkedIn"><i data-feather="linkedin"></i></a>
 				|
 				<a href="cv.pdf" class="blog_cv">[cv]</a>
-
-
+				
+				
 			</ul>
 		</nav>
 	</div>
 
 	<nav class="nav">
 		<ul class="flat">
-
+			
 		</ul>
 	</nav>
 </div>
@@ -74,44 +74,48 @@ improve scalability of program analysis and verification.</p>
 DRL has been shown to be successful in many applications such as robotics and game playing.
 However, applying DRL to new problems is challenging due to a number of reasons. Firstly,
 it is not always straightforward to define rewards for the task at hand. In
-(<a href="paper/spectrl_full.pdf">NeurIPS&rsquo;20</a>) we provide a way to
+our <a href="papers/spectrl_full.pdf">NeurIPS&rsquo;20</a>) paper we provide a way to
 overcome this challenge by proposing an algorithm that automatically generates rewards from
 a high level logical specification.
 Another major drawback of DRL is that it does not provide any guarantee about
 the learned policy. In safety critical applications, we would like to verify that the
-learned policy is, in fact, safe. An interesting research direction that I am looking into, here,
-is to see how one can decompose an
-RL task into simpler tasks, so that, not only is it easier to learn policies for the simpler tasks,
+learned policy is, in fact, safe. Towards this goal, I am working on a project
+on decomposing
+RL tasks into simpler tasks so that, not only is it easier to learn policies for the simpler tasks,
 but it also makes verification faster.</p>
 
 			</div><div>
-
+			
 
 <h3 id="publications">Publications</h3>
 
 <ul>
-<li><p><strong>A composable specification language for reinforcement learning tasks</strong>, Kishor Jothimurugan,
-Rajeev Alur, Osbert Bastani. <em>Neural Information Processing Systems (NeurIPS), 2019</em>.<br />
+<li><p><strong>A composable specification language for reinforcement learning tasks</strong>.<br />
+Kishor Jothimurugan, Rajeev Alur, Osbert Bastani.<br />
+<em>Neural Information Processing Systems (NeurIPS), 2019</em>.<br />
 [<a href="papers/spectrl_full.pdf">paper</a>][<a href="https://drive.google.com/file/d/1-TfjsnnWWFI9Dz0rAGBgjoRJ6ESlKSzJ/view?usp=sharing">slides</a>][<a href="https://github.com/keyshor/spectrl_tool">code</a>]</p></li>
 
-<li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>, Rajeev Alur, Yu Chen,
-Kishor Jothimurugan, Sanjeev Khanna. <em>Logic in Computer Science (LICS), 2020</em>.<br />
+<li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>.<br />
+Rajeev Alur, Yu Chen, Kishor Jothimurugan, Sanjeev Khanna.<br />
+<em>Logic in Computer Science (LICS), 2020</em>.<br />
 [<a href="papers/lics20.pdf">paper</a>][<a href="https://docs.google.com/presentation/d/1hIBcbCh8aD63NEWL2lydmi2Wprz72wcQohP8e8yU1BA/edit?usp=sharing">slides</a>]</p></li>
 </ul>
 
 <h3 id="drafts-and-reports">Drafts and Reports</h3>
 
 <ul>
-<li><p><strong>Abstract value iteration for hierarchical deep reinforcement learning</strong>, Kishor Jothimurugan,
-Osbert Bastani, Rajeev Alur. <em>In submission</em>.</p></li>
+<li><p><strong>Abstract value iteration for hierarchical deep reinforcement learning</strong>.<br />
+Kishor Jothimurugan, Osbert Bastani, Rajeev Alur.<br />
+<em>In submission</em>.</p></li>
 
-<li><p><strong>Techniques for verifying robustness of neural networks</strong>, Kishor Jothimurugan.
+<li><p><strong>Techniques for verifying robustness of neural networks</strong>.<br />
+Kishor Jothimurugan.<br />
 <em>WPE II Survey Report</em>.<br />
 [<a href="papers/wpe2.pdf">report</a>]</p></li>
 </ul>
 
 			</div><div>
-
+			
 
 <h3 id="internships">Internships</h3>
 
@@ -159,7 +163,7 @@ var doNotTrack = false;
 if (!doNotTrack) {
 	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 	ga('create', 'UA-1234-6', 'auto');
-
+	
 	ga('send', 'pageview');
 }
 </script>
