--- a/public/index.html
+++ b/public/index.html
@@ -94,12 +94,15 @@ but it also makes verification faster.</p>
 <li><p><strong>A composable specification language for reinforcement learning tasks</strong>.
 Kishor Jothimurugan, Rajeev Alur and Osbert Bastani.
 <em>Neural Information Processing Systems (NeurIPS), 2019</em>.<br />
-[<a href="papers/spectrl_full.pdf">paper</a>][<a href="https://drive.google.com/file/d/1-TfjsnnWWFI9Dz0rAGBgjoRJ6ESlKSzJ/view?usp=sharing">slides</a>][<a href="https://github.com/keyshor/spectrl_tool">code</a>]</p></li>
+[<a href="papers/spectrl_full.pdf">paper</a>][<a href="https://arxiv.org/abs/2008.09293">arXiv</a>]
+[<a href="https://drive.google.com/file/d/1-TfjsnnWWFI9Dz0rAGBgjoRJ6ESlKSzJ/view?usp=sharing">slides</a>]
+[<a href="https://github.com/keyshor/spectrl_tool">code</a>]</p></li>
 
 <li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>.
 Rajeev Alur, Yu Chen, Kishor Jothimurugan and Sanjeev Khanna.
 <em>Logic in Computer Science (LICS), 2020</em>.<br />
-[<a href="papers/lics20.pdf">paper</a>][<a href="https://docs.google.com/presentation/d/1hIBcbCh8aD63NEWL2lydmi2Wprz72wcQohP8e8yU1BA/edit?usp=sharing">slides</a>]</p></li>
+[<a href="papers/lics20.pdf">paper</a>]
+[<a href="https://docs.google.com/presentation/d/1hIBcbCh8aD63NEWL2lydmi2Wprz72wcQohP8e8yU1BA/edit?usp=sharing">slides</a>]</p></li>
 </ul>
 
 <h3 id="drafts-and-reports">Drafts and Reports</h3>
