--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="Publications" />
 <meta property="og:description" content="Publications  A composable specification language for reinforcement learning tasks. Kishor Jothimurugan, Rajeev Alur and Osbert Bastani. Neural Information Processing Systems (NeurIPS), 2019.
-[paper][arXiv] [slides] [code]
+[paper] [arXiv] [slides] [code]
  Space-efficient query evaluation over probabilistic event streams. Rajeev Alur, Yu Chen, Kishor Jothimurugan and Sanjeev Khanna. Logic in Computer Science (LICS), 2020.
 [paper] [slides]
   Drafts and Reports  Abstract value iteration for hierarchical deep reinforcement learning. Kishor Jothimurugan, Osbert Bastani and Rajeev Alur." />
@@ -24,7 +24,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Publications"/>
 <meta name="twitter:description" content="Publications  A composable specification language for reinforcement learning tasks. Kishor Jothimurugan, Rajeev Alur and Osbert Bastani. Neural Information Processing Systems (NeurIPS), 2019.
-[paper][arXiv] [slides] [code]
+[paper] [arXiv] [slides] [code]
  Space-efficient query evaluation over probabilistic event streams. Rajeev Alur, Yu Chen, Kishor Jothimurugan and Sanjeev Khanna. Logic in Computer Science (LICS), 2020.
 [paper] [slides]
   Drafts and Reports  Abstract value iteration for hierarchical deep reinforcement learning. Kishor Jothimurugan, Osbert Bastani and Rajeev Alur."/>
@@ -56,7 +56,8 @@
 <li><p><strong>A composable specification language for reinforcement learning tasks</strong>.
 Kishor Jothimurugan, Rajeev Alur and Osbert Bastani.
 <em>Neural Information Processing Systems (NeurIPS), 2019</em>.<br />
-[<a href="papers/spectrl_full.pdf">paper</a>][<a href="https://arxiv.org/abs/2008.09293">arXiv</a>]
+[<a href="papers/spectrl_full.pdf">paper</a>]
+[<a href="https://arxiv.org/abs/2008.09293">arXiv</a>]
 [<a href="https://drive.google.com/file/d/1-TfjsnnWWFI9Dz0rAGBgjoRJ6ESlKSzJ/view?usp=sharing">slides</a>]
 [<a href="https://github.com/keyshor/spectrl_tool">code</a>]</p></li>
 
