--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,8 @@ but it also makes verification faster.</p>
 <li><p><strong>A composable specification language for reinforcement learning tasks</strong>.
 Kishor Jothimurugan, Rajeev Alur and Osbert Bastani.
 <em>Neural Information Processing Systems (NeurIPS), 2019</em>.<br />
-[<a href="papers/spectrl_full.pdf">paper</a>][<a href="https://arxiv.org/abs/2008.09293">arXiv</a>]
+[<a href="papers/spectrl_full.pdf">paper</a>]
+[<a href="https://arxiv.org/abs/2008.09293">arXiv</a>]
 [<a href="https://drive.google.com/file/d/1-TfjsnnWWFI9Dz0rAGBgjoRJ6ESlKSzJ/view?usp=sharing">slides</a>]
 [<a href="https://github.com/keyshor/spectrl_tool">code</a>]</p></li>
 
