--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,9 @@
 </div>
 
 			<div>
-			<p>I am a third-year PhD student in computer science at the University of Pennsylvania.
+
+
+<p>I am a third-year PhD student in computer science at the University of Pennsylvania.
 I am being advised by <a href="https://www.cis.upenn.edu/~alur">Rajeev Alur</a>. I received my
 B.Sc. (Honors) in Mathematics and Computer Science from the
 <a href="https://www.cmi.ac.in">Chennai Mathematical Institute</a>.</p>
@@ -69,6 +71,8 @@ In particular, I am interested in applying formal methods to
 improve applicability and reliability of deep reinforcement learning,
 verifying systems with neural network components, and using machine learning to
 improve scalability of program analysis and verification.</p>
+
+<h3 id="current-research">Current Research</h3>
 
 <p>My current research focusses on applications of formal methods to deep reinforcement learning (DRL).
 DRL has been shown to be successful in many applications such as robotics and game playing.
