--- a/public/introduction/index.html
+++ b/public/introduction/index.html
@@ -55,6 +55,8 @@ improve applicability and reliability of deep reinforcement learning,
 verifying systems with neural network components, and using machine learning to
 improve scalability of program analysis and verification.</p>
 
+<h3 id="current-research">Current Research</h3>
+
 <p>My current research focusses on applications of formal methods to deep reinforcement learning (DRL).
 DRL has been shown to be successful in many applications such as robotics and game playing.
 However, applying DRL to new problems is challenging due to a number of reasons. Firstly,
