--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 			<div>
 
 
-<p>I am a third-year PhD student in computer science at the University of Pennsylvania.
+<p>I am a fourth-year PhD student in computer science at the University of Pennsylvania.
 I am being advised by <a href="https://www.cis.upenn.edu/~alur">Rajeev Alur</a>. I received my
 B.Sc. (Honors) in Mathematics and Computer Science from the
 <a href="https://www.cmi.ac.in">Chennai Mathematical Institute</a>.</p>
@@ -78,7 +78,7 @@ improve scalability of program analysis and verification.</p>
 DRL has been shown to be successful in many applications such as robotics and game playing.
 However, applying DRL to new problems is challenging due to a number of reasons. Firstly,
 it is not always straightforward to define rewards for the task at hand. In
-our <a href="papers/spectrl_full.pdf">NeurIPS&rsquo;20</a> paper we provide a way to
+our <a href="papers/spectrl_full.pdf">NeurIPS&rsquo;19</a> paper we provide a way to
 overcome this challenge by proposing an algorithm that automatically generates rewards from
 a high level logical specification.</p>
 
