--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -79,7 +79,7 @@ Kishor Jothimurugan, Osbert Bastani and Rajeev Alur.
 [<a href="https://arxiv.org/abs/2010.15638">arXiv</a>]
 [<a href="https://github.com/keyshor/abstract-value-iteration">code</a>]
 [<a href="https://drive.google.com/file/d/1cu037p8c5xn7AzcII5a-VozgBIBpDuET/view?usp=sharing">slides</a>]
-[<a href="https://www.youtube.com/watch?v=-gXl5r4Z-N4&amp;ab_channel=SimonsInstitute">talk</a>]</p></li>
+[<a href="https://simons.berkeley.edu/talks/tbd-325">talk</a>]</p></li>
 
 <li><p><strong>Space-efficient query evaluation over probabilistic event streams</strong>.<sup>&dagger;</sup>
 Rajeev Alur, Yu Chen, Kishor Jothimurugan and Sanjeev Khanna.
@@ -113,7 +113,7 @@ Kishor Jothimurugan, Suguman Bansal, Osbert Bastani and Rajeev Alur.
 <h3 id="drafts-and-reports">Drafts and Reports</h3>
 
 <ul>
-<li><p><strong>A Framework for Transforming Specifications in Reinforcement Learning</strong>.<sup>&dagger;</sup>
+<li><p><strong>A framework for transforming specifications in reinforcement learning</strong>.<sup>&dagger;</sup>
 Rajeev Alur, Suguman Bansal, Osbert Bastani, Kishor Jothimurugan.
 <em>In submission</em>.</p></li>
 
